# topagnps2cche1d

./: .gitignore  Control Module Tech Manual 992 Rev2.doc  README.md  cche1d_viz.ipynb  environment.yaml  environment.yml  pyproject.toml  to2cche1d_script.py  ~$ntrol Module Tech Manual 992 Rev2.doc
data_inputs/goodwin_creek_1m/: AnnAGNPS_Reach_Data_Section.csv  AnnAGNPS_Reach_IDs.asc.aux.xml  goodwin_creek_1m_before_update.pkl
data_inputs/netchanTest_example_cche1d_input_files/: netchan_nodes_csv.csv
documents/: Control Module Tech Manual 992 Rev2.doc  dr_zhang_message.txt
goodwin_creek_1m/: AgFlow_Reach_Data.csv
goodwin_creek_1m/cche1d/: cche1d_annagnps_reach_equivalent.csv
input_data/goodwin_creek_1m/: AnnAGNPS_Cell_Data_Section.csv
input_data/goodwin_creek_files/: AgFlow_Reach_Data.csv
input_data/topagnps_ohio_files/: AgFlow_Reach_Data.csv  AnnAGNPS_Reach_IDs.PRJ  FLOVEC.ASC  NETW.ASC
input_data/topagnps_ohio_files/hidden/: PEG_Summary.csv  (+2 more)
notebooks_and_scripts/: cche1d_viz.ipynb  sandbox.ipynb  test.csv  test_object_oriented_goodwin_creek_10m_2nd_order.ipynb  test_objected_oriented_goodwin_creek_3_reaches.ipynb  test_objected_oriented_uprb.ipynb  test_objected_oriented_watershed.ipynb  test_small_object_watershed.ipynb  to2cche1d_script.py  top2cche1d_goodwin_creek.ipynb  top2cche1d_notebook.ipynb  top2cche1d_script.py
topagnps2cche1d/: __init__.py  cell.py  crosssection.py  network.py  node.py  reach.py  tools.py  toolsv2.py  watershed.py
topagnps_ohio_files/: AnnAGNPS_Reach_IDs.asc  test.asc
topagnps_ohio_files/hidden/: DEDNM.asc
(+199 files in other folders)
