[project]
name = "topagnps2cche1d"
version = "0.1.0"
description = "A toolbox to process TopAGNPS and AnnAGNPS outputs to generate CCHE1D compatible input files"
authors = [
    {name = "Luc Rébillout", email = "luc@ncche.olemiss.edu"},
]
dependencies = [
    "nbformat>=5.8.0",
    "ipykernel>=6.23.1",
    "gdal @ https://github.com/girder/large_image_wheels/raw/wheelhouse/GDAL-3.4.3-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl#sha256=6b98d9c0b17b99ceffe351de9d936facdc85991a9209f89e8b3add34dca495fa ; sys_platform=='linux'",
    "gdal @ https://download.lfd.uci.edu/pythonlibs/archived/GDAL-3.4.3-cp311-cp311-win_amd64.whl ; sys_platform=='win32'",
    "plotly>=5.14.1",
    "numpy>=1.24.3",
    "pandas>=2.0.2",
    "affine>=2.4.0",
    "networkx>=3.1",
    "matplotlib>=3.7.2",
    "scipy>=1.9.3",
    "tqdm>=4.66.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black[jupyter]>=23.7.0",
]
